tests/errors/papercut-cell-and-group-conflict.expect
---CODE---
1
---STDERR---
Error: 
9 |    group incr {
  |          ^^^^ Name already bound by cell
